CREATE TABLE "users" (
  "user_id" BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "username" varchar UNIQUE NOT NULL,
  "password" varchar NOT NULL,
  "created_at" timestamp DEFAULT (now())
);

CREATE TABLE "pets" (
  "pet_id" BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "user_id" bigint NOT NULL,
  "name" varchar NOT NULL,
  "birth_date" date NOT NULL,
  "breed" varchar NOT NULL,
  "gender" varchar NOT NULL,
  "weight" float,
  "medical_history" varchar NOT NULL,
  "profile_image_url" varchar,
  "created_at" timestamp DEFAULT (now())
);

CREATE TABLE "analyses" (
  "analysis_id" BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "pet_id" bigint NOT NULL,
  "video_url" varchar NOT NULL,
  "status" varchar NOT NULL DEFAULT 'pending',
  "risk_level" varchar,
  "ai_result" json,
  "memo" varchar,
  "created_at" timestamp DEFAULT (now()),
  "updated_at" timestamp
);

CREATE TABLE "hospitals" (
  "hospital_id" BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "name" varchar NOT NULL,
  "address" varchar,
  "phone" varchar,
  "latitude" float NOT NULL,
  "longitude" float NOT NULL,
  "specialty" varchar,
  "image_url" varchar,
  "business_hours" json,
  "certifications" varchar
);

CREATE TABLE "favorite_hospitals" (
  "favorite_id" BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "pet_id" bigint NOT NULL,
  "hospital_id" bigint NOT NULL,
  "created_at" timestamp DEFAULT (now())
);

CREATE TABLE "notifications" (
  "notification_id" BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "user_id" bigint NOT NULL,
  "type" varchar,
  "title" varchar,
  "is_read" boolean DEFAULT false,
  "related_type" varchar,
  "related_id" bigint,
  "created_at" timestamp DEFAULT (now())
);

CREATE TABLE "recommendations" (
  "recommendation_id" BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "risk_level" varchar NOT NULL,
  "type" varchar NOT NULL,
  "title" varchar NOT NULL,
  "content" text,
  "image_url" varchar,
  "display_order" int DEFAULT 0,
  "is_active" boolean DEFAULT true
);

CREATE TABLE "push_subscriptions" (
  "subscription_id" BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "user_id" bigint NOT NULL,
  "endpoint" varchar NOT NULL,
  "p256dh_key" varchar NOT NULL,
  "auth_key" varchar NOT NULL,
  "user_agent" varchar,
  "created_at" timestamp DEFAULT (now())
);

CREATE UNIQUE INDEX "uniq_pet_hospital" ON "favorite_hospitals" ("pet_id", "hospital_id");

COMMENT ON COLUMN "users"."username" IS '아이디 (4~20자)';

COMMENT ON COLUMN "users"."password" IS '해시된 비밀번호 (bcrypt)';

COMMENT ON COLUMN "pets"."name" IS '강아지 이름 (1~20자)';

COMMENT ON COLUMN "pets"."birth_date" IS '생년월일 (YYYY-MM-DD)';

COMMENT ON COLUMN "pets"."breed" IS '견종 enum (16종 + 기타):
  포메라니안, 말티즈, 토이푸들, 미니어처푸들, 치와와,
  요크셔테리어, 시츄, 비숑프리제, 페키니즈, 미니핀,
  빠삐용, 코카스파니엘, 보스턴테리어, 잭러셀테리어,
  닥스훈트, 프렌치불독, 기타';

COMMENT ON COLUMN "pets"."gender" IS 'male / female (화면: 남아/여아)';

COMMENT ON COLUMN "pets"."weight" IS '체중 kg (선택)';

COMMENT ON COLUMN "pets"."medical_history" IS '과거 병력 enum (6개):
  없음, 슬개골 탈구 이력 있음, 슬개골 수술 경험 있음,
  관절 질환 (슬개골 외), 근육/인대 부상 이력, 기타';

COMMENT ON COLUMN "pets"."profile_image_url" IS '프로필 사진 경로 (예: /uploads/pet_profiles/pet_1_abc123.jpg)';

COMMENT ON COLUMN "analyses"."video_url" IS '업로드된 영상 URL';

COMMENT ON COLUMN "analyses"."status" IS 'pending/processing/completed/failed';

COMMENT ON COLUMN "analyses"."risk_level" IS 'normal / caution / danger (선예영님 답변 5/3 확정)';

COMMENT ON COLUMN "analyses"."ai_result" IS 'AI 서버 요약 지표 (선예영님 답변 5/3 확정 - 39개 관절 raw 데이터 X, 요약 지표만)
  {
    "symmetry_score": float,        // 좌우대칭성 (0~1)
    "gait_cycle_mean": float,       // 보행주기 평균 (초)
    "gait_cycle_std": float,        // 보행주기 표준편차
    "spine_stability": float,       // 척추안정성 (0~1)
    "confidence": float,            // 관절 검출 신뢰도 (0~1)
    "analyzed_at": "ISO 8601"       // 분석 완료 시각
  }';

COMMENT ON COLUMN "analyses"."memo" IS '사용자 메모 (0~200자, nullable, 분석 완료 후 작성)';

COMMENT ON COLUMN "analyses"."updated_at" IS '메모 수정 시 갱신';

COMMENT ON COLUMN "hospitals"."specialty" IS '전문 분야 - 자체 큐레이션';

COMMENT ON COLUMN "hospitals"."image_url" IS '병원 사진 URL - 자체 큐레이션';

COMMENT ON COLUMN "hospitals"."business_hours" IS '요일별 영업시간 - 자체 큐레이션';

COMMENT ON COLUMN "hospitals"."certifications" IS '인증 (피어프리 등) - 자체 큐레이션';

COMMENT ON COLUMN "favorite_hospitals"."pet_id" IS 'CASCADE: 강아지 삭제 시 함께 삭제';

COMMENT ON COLUMN "notifications"."type" IS '알림 type:
  analysis_complete / high_risk_warning /
  weekly_reminder / monthly_reminder /
  favorite_added';

COMMENT ON COLUMN "notifications"."related_type" IS 'analysis / pet / hospital - 클릭 시 이동할 화면 종류';

COMMENT ON COLUMN "notifications"."related_id" IS '클릭 시 이동할 대상 ID';

COMMENT ON COLUMN "recommendations"."risk_level" IS 'normal / caution / danger';

COMMENT ON COLUMN "recommendations"."type" IS 'exercise / product / hospital_visit';

COMMENT ON COLUMN "recommendations"."title" IS '예: 미끄럼방지 매트 추천';

COMMENT ON COLUMN "recommendations"."content" IS '상세 설명';

COMMENT ON COLUMN "recommendations"."image_url" IS '썸네일 이미지';

COMMENT ON COLUMN "recommendations"."display_order" IS '표시 순서';

COMMENT ON COLUMN "recommendations"."is_active" IS '노출 여부';

COMMENT ON COLUMN "push_subscriptions"."endpoint" IS '브라우저 푸시 엔드포인트 URL';

COMMENT ON COLUMN "push_subscriptions"."p256dh_key" IS '암호화 공개키';

COMMENT ON COLUMN "push_subscriptions"."auth_key" IS '인증키';

COMMENT ON COLUMN "push_subscriptions"."user_agent" IS '디바이스 식별용 (선택)';

ALTER TABLE "pets" ADD FOREIGN KEY ("user_id") REFERENCES "users" ("user_id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "analyses" ADD FOREIGN KEY ("pet_id") REFERENCES "pets" ("pet_id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "favorite_hospitals" ADD FOREIGN KEY ("pet_id") REFERENCES "pets" ("pet_id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "favorite_hospitals" ADD FOREIGN KEY ("hospital_id") REFERENCES "hospitals" ("hospital_id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "notifications" ADD FOREIGN KEY ("user_id") REFERENCES "users" ("user_id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "push_subscriptions" ADD FOREIGN KEY ("user_id") REFERENCES "users" ("user_id") DEFERRABLE INITIALLY IMMEDIATE;
